# ai-polyglot-kit

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  groq_dictation.spec  installer.iss  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/commands/: analyze-backend.md  analyze-frontend.md  analyze-security.md  analyze-ui.md  pre-commit-check.md
.github/workflows/: ci.yml
docs/mockups/: recording-overlay.html  settings-ui-tkinter.html  settings-ui.html
docs/reviews/: 2026-03-28-context-engine-review-opus.md  2026-03-28-context-engine-review-sonnet.md
docs/reviews/v3/: architecture-opus.md  architecture-sonnet.md  formal-verification.py  performance-sonnet.md  security-opus.md  ux-product-sonnet.md
docs/reviews/v4/: architecture-opus.md  architecture-sonnet.md  performance-sonnet.md  security-opus.md  ux-product-sonnet.md
docs/reviews/v5/: architecture-opus.md  architecture-sonnet.md  performance-sonnet.md  security-opus.md  (+1 more)
extension/: background.js  content.js  popup.js
src/: audio_capture.py  betterstack_handler.py  chunk_manager.py  config.py  engine.py  groq_stt.py  i18n.py  main.py  normalizer.py  provider_manager.py  providers.py  settings_ui.py  telemetry.py  text_injector.py  translate_engine.py  translate_overlay.py  translate_server.py  tray_app.py  updater.py  user_profile.py
src/connectors/: assembly_stt.py  base.py  gladia_stt.py  openai_llm.py  openai_stt.py  speechmatics_stt.py
src/context/: __init__.py  cooccurrence.py  db.py  engine.py  maintenance.py  threads.py
src/ui/: __init__.py  _settings_main.py  build_settings.py  overlay.py  settings_bootstrap.py  settings_contract.py  settings_window.py  web_bridge.py
tests/: conftest.py  factories.py
tests/integration/: test_db_maintenance.py
tests/ui/: test_settings_contract.py
(+14 files in other folders)
